@@ -205,6 +205,18 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
+                        <includes>
+                            <include>**/*Test.java</include>
+                            <include>**/OrderServiceImplIT.java</include>
+                        </includes>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
